--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -1,13 +1,13 @@
 /* max */
 
-@media (max-width: 480px) {
+@media (max-width: 30rem) {
 	#container,
 	.success-message {
 		width: 85%;
 	}
 }
 
-@media (max-width: 350px) {
+@media (max-width: 21.8rem) {
 	h1 {
 		font-size: 1.5rem;
 	}
@@ -28,7 +28,7 @@
 	}
 }
 
-@media (max-width: 250px) {
+@media (max-width: 15.6rem) {
 	#container,
 	.success-message {
 		padding: 1rem;
@@ -58,14 +58,14 @@
 
 /* min */
 
-@media (min-width: 481px) {
+@media (min-width: 30.1rem) {
 	#container,
 	.success-message {
 		width: 70%;
 	}
 }
 
-@media (min-width: 769px) {
+@media (min-width: 48.1rem) {
 	#container {
 		padding: 2rem;
 		max-width: 45rem;
@@ -84,7 +84,7 @@
 	}
 }
 
-@media (min-width: 1841px) {
+@media (min-width: 115rem) {
 	body {
 		font-size: 2vh;
 	}
@@ -150,7 +150,7 @@
 	}
 }
 
-@media (min-width: 4000px) {
+@media (min-width: 250rem) {
 	#container,
 	input,
 	.message,
